--- a/css/styles.css
+++ b/css/styles.css
@@ -322,7 +322,8 @@ body {
 /*----------- HEADER --------------*/
 header {
   padding: .5rem 2%;
-  background-color: #ddd; }
+  background-color: #1b5037;
+  color: #fff; }
 
 header h1 {
   margin: 0; }
@@ -333,7 +334,7 @@ header h2 {
 
 /*----------- NAVIGATION --------------*/
 nav {
-  background-color: #666; }
+  background-color: #56b689; }
 
 nav ul {
   list-style-type: none;
@@ -346,7 +347,7 @@ nav ul li {
 
 nav ul li a {
   display: block;
-  background-color: #444;
+  background-color: #56b689;
   color: #eee;
   border-left: 1px solid #777;
   padding: .5rem 0;
@@ -358,11 +359,11 @@ nav ul li:first-child a {
   border-left: none; }
 
 nav ul li a:hover {
-  background-color: #eee;
-  color: #333; }
+  background-color: #377a5b;
+  color: #fff; }
 
 nav ul li.active a {
-  background-color: #000;
+  background-color: #377a5b;
   color: #fff; }
 
 /*----------- MAIN --------------*/
@@ -410,9 +411,10 @@ main {
 
 /*----------- FOOTER --------------*/
 footer {
-  background-color: #ddd;
+  background-color: #56b689;
   padding: .5rem 2%;
-  text-align: center; }
+  text-align: center;
+  color: #fff; }
 
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
